# chat-app

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.prod.yml
.github/workflows/: docker-publish.yml
.sqlx/: query-6c0416d41791b74c07ac3a6c83edf8818732755999afc7f2fec6d61a936658d6.json  query-6f3bfd7e62169efd66d0389af681e313c5c734b6d8319eff34edbbc4bf8d015a.json  query-72fa3b3e7aa93cf54d58946bc4a486f42117f4b7814fc68985387f014b1ab7cc.json  query-945cdab76f168bb89403288fe733eb3b733820f34e31f3c837159f49a17edccf.json  query-98f4c0bfff04e07f5d0a46d48a31d24655826eebdf09c7f9f45d770df02035d3.json  query-9f9215a05f729db6f707c84967f4f11033d39d17ded98f4fe9fb48f3d1598596.json  query-e1a5b1e011b2852202f09e852e9e6d09d86a7092ce9273b4620354c94d19bcae.json
migrations/: 20240523062127_create_users_table.sql  20240524004810_create_posts_table.sql
src/: database.rs  feed.rs  live.rs  main.rs  moderation.rs  sessions.rs  users.rs
templates/: base.html  feed.html  login.html  signup.html  success.html  user.html
