[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["simple", "rand", "std"] }
askama = "0.12"
askama_warp = "0.13.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
jwt-simple = { version = "0.12.9", default-features = false, features = [
    "pure-rust",
] }
log = "0.4.21"
password-hash = "0.5.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1.15"
warp = "0.3.7"
